--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.pexip.example"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -20,10 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile project(':pexkit')
-    compile group: 'com.spotify', name: 'dns', version: '3.0.2'
-    compile group: 'com.loopj.android', name: 'android-async-http', version: '1.4.7'
+    compile 'com.spotify:dns:3.0.2'
+    compile 'com.loopj.android:android-async-http:1.4.7'
     compile 'io.pristine:libjingle:10111@aar'
+    compile 'com.android.support:design:23.0.0'
 }
